--- a/client/package.json
+++ b/client/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser-dynamic": "^18.0.4",
     "@angular/router": "^18.0.4",
     "bootstrap": "^5.3.3",
+    "bootswatch": "^5.3.3",
     "font-awesome": "^4.7.0",
     "ngx-bootstrap": "^12.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -39,11 +41,11 @@
     "typescript": "~5.4.2"
   },
   "overrides": {
-    "ngx-bootstrap":{
+    "ngx-bootstrap": {
       "@angular/common": "$@angular/common",
       "@angular/core": "$@angular/core",
       "@angular/animations": "$@angular/animations",
-      "@angular/forms":"$@angular/for"
+      "@angular/forms": "$@angular/for"
     }
   }
 }
