--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.0.4",
+    "@angular/cdk": "^18.0.6",
     "@angular/common": "^18.0.4",
     "@angular/compiler": "^18.0.4",
     "@angular/core": "^18.0.4",
@@ -21,6 +22,7 @@
     "bootstrap": "^5.3.3",
     "bootswatch": "^5.3.3",
     "font-awesome": "^4.7.0",
+    "ng-gallery": "^11.0.0",
     "ngx-bootstrap": "^12.0.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
