--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,5 +6,10 @@
     }
   },
   "TokenKey":"super secret unguessable key super secret unguessable key super secret unguessable key",
+  "CloudinarySettings":{
+    "CloudName":"djtiizoxt",
+    "ApiKey":"582476595258938",
+    "ApiSecret":"MPqQJArxTBtzDfGTTgxeyzFkza4"
+  },
   "AllowedHosts": "*"
 }
